--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="container">
         <div id="profile">
             <img src="./img/avatar.png" alt="Foto de perfil sorrindo e usando oculos">
-            <p>@testePerfil</p>
+            <p>@IgorJunio</p>
         </div>
 
         <div id="switch">
