Alterações no Cursor e Algumas Melhorias

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css27?family=Inter:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css27?family=Inter:wght@400;500&display=swap" rel="stylesheet">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Rocketseat</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
 
     <div id="container">
@@ -25,16 +27,10 @@
 
         <ul>
             <li>
-                <a href="#">Inscrever-se no NLW</a>
+                <a href="https://github.com/igorsilva29" target="_blank">Ver meu portfolio</a>
             </li>
             <li>
-                <a href="#">Baixar meu e-book</a>
-            </li>
-            <li>
-                <a href="#">Ver meu portfolio</a>
-            </li>
-            <li>
-                <a href="#">Conheça o Explorer</a>
+                <a href="https://www.rocketseat.com.br/referral/one?referral=igor-junio-06815&coupon=indicamgm&utm_source=platform&utm_medium=organic&utm_campaign=venda&utm_term=mgm&utm_content=indication-lp_one" target="_blank">Conheça o Explorer</a>
             </li>
         </ul>
         <div id="social-links">
@@ -42,26 +38,27 @@
                 <ion-icon name="logo-github"></ion-icon>
             </a>
 
-            <a href="https://instagram.com/igorsilva29" target="_blank">
+            <a href="http://instagram.com/igormusicas" target="_blank">
                 <ion-icon name="logo-instagram"></ion-icon>
             </a>
 
-            <a href="https://youtube.com/igorsilva29" target="_blank">
+            <a href="https://www.youtube.com/@IgorMusicas" target="_blank">
                 <ion-icon name="logo-youtube"></ion-icon>
             </a>
 
-            <a href="https://linkedin.com/igorsilva29" target="_blank">
+            <a href="https://www.linkedin.com/in/igor-junio-1a9ab1297/" target="_blank">
                 <ion-icon name="logo-linkedin"></ion-icon>
             </a>
         </div>
         <footer>
-            Feito por <a href="#">Igor Junio.</a>
+            Feito por <a href="https://github.com/igorsilva29" target="_blank">Igor Junio.</a>
         </footer>
     </div>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-        <script src="./script.js"></script>
-    </body>
+    <script src="./script.js"></script>
+</body>
+
 </html>
